compiler/tests/should-fail/ConfidentialityChangingEndorsement.via
/* ConfidentialityChangingEndorsementError */

process main {
    val result: int = endorse 42 from {A} to {A<-};
}
